# survey-assesment

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: ci.yml
apps/accounts/: admin.py  apps.py  authentication.py  managers.py  models.py  schema.py  serializers.py  urls.py  views.py
apps/accounts/management/commands/: seed_rbac.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: factories.py  test_auth.py  test_authentication_class.py  test_models.py  test_ratelimit.py  test_seed_rbac.py
apps/audit/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py
apps/audit/tests/: test_audit.py
apps/core/: context.py  exceptions.py  logging.py  managers.py  middleware.py  models.py  permissions.py
apps/core/management/commands/: seed_demo.py
apps/core/tests/: tenant_test_model.py  test_exception_handler.py  test_permissions.py  test_request_id.py  test_tenant_manager.py
apps/organizations/: admin.py  apps.py  middleware.py  models.py
apps/organizations/migrations/: 0001_initial.py
apps/organizations/tests/: factories.py  test_middleware.py  test_models.py
apps/responses/: admin.py  apps.py  crypto.py  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/responses/migrations/: 0001_initial.py
apps/responses/tests/: factories.py  test_api.py  test_cache.py  test_crypto.py  test_models.py  test_submit_service.py  test_tasks.py
apps/surveys/: admin.py  apps.py  field_types.py  logic.py  models.py  serializers.py  urls.py  views.py
apps/surveys/migrations/: 0001_initial.py
apps/surveys/tests/: factories.py  test_api_actions.py  test_api_crud.py  test_field_types.py  test_logic.py  test_models.py  test_serializers.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docker/: Dockerfile  entrypoint.sh
docs/: architecture.md  cookbook.md  versioning.md
traefik/: dynamic.yml
